--- a/stacks/apps/networks.yml
+++ b/stacks/apps/networks.yml
@@ -253,27 +253,25 @@ Resources:
               Value: !Ref SharedMemcachedEndpointAddress
             - Name: MEMCACHED_PORT_11211_TCP_PORT
               Value: !Ref SharedMemcachedEndpointPort
-            - Name: SPHINX_SERVER # TODO Remove from secrets
+            - Name: SPHINX_SERVER
               Value: !GetAtt Constants.VanityNlbDomain
-            - Name: SPHINX_PORT # TODO Remove from secrets
+            - Name: SPHINX_PORT
               Value: !Ref kSphinxPort
-            - Name: SPHINX_BASE_URL # TODO Remove from secrets
+            - Name: SPHINX_BASE_URL
               Value: !GetAtt Constants.SphinxBaseUrl
-            - Name: SPHINX_BIN # TODO Remove from secrets
+            - Name: SPHINX_BIN
               Value: /usr/local/bin
             - Name: DB_PORT_3306_TCP_ADDR
               Value: !Ref SharedAuroraMysqlEndpoint
             - Name: DB_PORT_3306_TCP_PORT
               Value: !Ref SharedAuroraMysqlPort
-            - Name: DATABASE_POOL_SIZE # TODO Remove from secrets
+            - Name: DATABASE_POOL_SIZE
               Value: "5"
-            - Name: LOG_LEVEL # TODO Remove from secrets
+            - Name: LOG_LEVEL
               Value: !If [IsProduction, INFO, DEBUG]
-            # - Name: PRX_API_BASE_URL # TODO Remove from secrets
-            #   Value: !If [IsProduction, INFO, DEBUG]
-            - Name: RAILS_LOG_STDOUT # TODO Remove from secrets
+            - Name: RAILS_LOG_STDOUT
               Value: "true"
-            - Name: RAILS_PORT # TODO Remove from secrets
+            - Name: RAILS_PORT
               Value: !Ref kWebApplicationPort
           Essential: true
           Image: !Ref EcrImageTag
@@ -322,6 +320,8 @@ Resources:
         - { Key: prx:dev:application, Value: Networks }
       Type: network
 
+  # NLBs do not provide a default TLS certificate for their native DNS name, so
+  # to handle TLS traffic, a custom cert and domain must be be used.
   NlbCertificate:
     Type: AWS::CertificateManager::Certificate
     Properties:
@@ -615,27 +615,25 @@ Resources:
               Value: !Ref SharedMemcachedEndpointAddress
             - Name: MEMCACHED_PORT_11211_TCP_PORT
               Value: !Ref SharedMemcachedEndpointPort
-            - Name: SPHINX_SERVER # TODO Remove from secrets
+            - Name: SPHINX_SERVER
               Value: !GetAtt Constants.VanityNlbDomain
-            - Name: SPHINX_PORT # TODO Remove from secrets
+            - Name: SPHINX_PORT
               Value: !Ref kSphinxPort
-            - Name: SPHINX_BASE_URL # TODO Remove from secrets
+            - Name: SPHINX_BASE_URL
               Value: !GetAtt Constants.SphinxBaseUrl
-            - Name: SPHINX_BIN # TODO Remove from secrets
+            - Name: SPHINX_BIN
               Value: /usr/local/bin
             - Name: DB_PORT_3306_TCP_ADDR
               Value: !Ref SharedAuroraMysqlEndpoint
             - Name: DB_PORT_3306_TCP_PORT
               Value: !Ref SharedAuroraMysqlPort
-            - Name: DATABASE_POOL_SIZE # TODO Remove from secrets
+            - Name: DATABASE_POOL_SIZE
               Value: "5"
-            - Name: LOG_LEVEL # TODO Remove from secrets
+            - Name: LOG_LEVEL
               Value: !If [IsProduction, INFO, DEBUG]
-            # - Name: PRX_API_BASE_URL # TODO Remove from secrets
-            #   Value: !If [IsProduction, INFO, DEBUG]
-            - Name: RAILS_LOG_STDOUT # TODO Remove from secrets
+            - Name: RAILS_LOG_STDOUT
               Value: "true"
-            - Name: RAILS_PORT # TODO Remove from secrets
+            - Name: RAILS_PORT
               Value: !Ref kWebApplicationPort
           Essential: true
           Image: !Ref EcrImageTag
