Move staging counts lambda

--- a/stacks/apps/dovetail-counts.yml
+++ b/stacks/apps/dovetail-counts.yml
@@ -37,6 +37,7 @@ Parameters:
 
 Conditions:
   IsProduction: !Equals [!Ref EnvironmentType, Production]
+  IsStaging: !Equals [!Ref EnvironmentType, Staging]
 
 Resources:
   CountsFunctionSecurityGroup:
@@ -79,11 +80,12 @@ Resources:
           REDIS_URL: !Sub cluster://${SharedRedisReplicationGroupEndpointAddress}:${SharedRedisReplicationGroupEndpointPort}
           S3_BUCKET: !Ref DovetailS3Bucket
           S3_PREFIX: !Ref DovetailS3ObjectStitchPrefix
+          PROCESS_AFTER: !If [IsStaging, "1635276000", ""] # TODO
       Events:
         KinesisTrigger:
           Properties:
             BatchSize: 100
-            Enabled: false # TODO
+            Enabled: !If [IsStaging, true, false] # TODO
             StartingPosition: LATEST
             Stream: !Ref DovetailCdnLogsKinesisArn
           Type: Kinesis
