Give counts-lambda access to STS/Kinesis endpoints

--- a/stacks/apps-100A.yml
+++ b/stacks/apps-100A.yml
@@ -24,6 +24,8 @@ Parameters:
   VpcPrivateSubnet1Id: { Type: AWS::EC2::Subnet::Id }
   VpcPrivateSubnet2Id: { Type: AWS::EC2::Subnet::Id }
   VpcPrivateSubnet3Id: { Type: AWS::EC2::Subnet::Id }
+  KinesisStreamsEndpointAccessSecurityGroupId: { Type: AWS::EC2::SecurityGroup::Id }
+  StsEndpointAccessSecurityGroupId: { Type: AWS::EC2::SecurityGroup::Id }
   SharedMemcachedEndpointAddress: { Type: String }
   AmazonSesSmtpCredentialsGeneratorServiceToken: { Type: String }
   CloudWatchAlarmTaggerServiceToken: { Type: String }
@@ -164,6 +166,8 @@ Resources:
         VpcPrivateSubnet1Id: !Ref VpcPrivateSubnet1Id
         VpcPrivateSubnet2Id: !Ref VpcPrivateSubnet2Id
         VpcPrivateSubnet3Id: !Ref VpcPrivateSubnet3Id
+        KinesisStreamsEndpointAccessSecurityGroupId: !Ref KinesisStreamsEndpointAccessSecurityGroupId
+        StsEndpointAccessSecurityGroupId: !Ref StsEndpointAccessSecurityGroupId
         ArrangementsDynamodbRegion: !Sub /prx/${EnvironmentTypeAbbreviation}/dovetail-cdn-arranger/ARRANGEMENTS_DDB_REGION
         ArrangementsDynamodbTableName: !Sub /prx/${EnvironmentTypeAbbreviation}/dovetail-cdn-arranger/ARRANGEMENTS_DDB_TABLE
         ArrangementsDynamodbAccessRoleArn: !Sub /prx/${EnvironmentTypeAbbreviation}/dovetail-cdn-arranger/ARRANGEMENTS_DDB_ACCESS_ROLE
