--- a/stacks/apps/dovetail-counts.yml
+++ b/stacks/apps/dovetail-counts.yml
@@ -25,6 +25,8 @@ Parameters:
   VpcPrivateSubnet1Id: { Type: AWS::EC2::Subnet::Id }
   VpcPrivateSubnet2Id: { Type: AWS::EC2::Subnet::Id }
   VpcPrivateSubnet3Id: { Type: AWS::EC2::Subnet::Id }
+  KinesisStreamsEndpointAccessSecurityGroupId: { Type: AWS::EC2::SecurityGroup::Id }
+  StsEndpointAccessSecurityGroupId: { Type: AWS::EC2::SecurityGroup::Id }
   ArrangementsDynamodbRegion: { Type: AWS::SSM::Parameter::Value<String> }
   ArrangementsDynamodbTableName: { Type: AWS::SSM::Parameter::Value<String> }
   ArrangementsDynamodbAccessRoleArn: { Type: AWS::SSM::Parameter::Value<String> }
@@ -128,6 +130,8 @@ Resources:
       VpcConfig:
         SecurityGroupIds:
           - !GetAtt CountsFunctionSecurityGroup.GroupId
+          - !Ref KinesisStreamsEndpointAccessSecurityGroupId
+          - !Ref StsEndpointAccessSecurityGroupId
         SubnetIds:
           - !Ref VpcPrivateSubnet1Id
           - !Ref VpcPrivateSubnet2Id
