--- a/stacks/shared-vpc.yml
+++ b/stacks/shared-vpc.yml
@@ -295,10 +295,17 @@ Outputs:
       The ID of a security group that has VPC Endpoint access to AWS services
       required to launch tasks in ECS.
     Value: !GetAtt InterfaceEndpointsStack.Outputs.EcsLaunchEndpointsAccessSecurityGroupId
+  KinesisStreamsEndpointAccessSecurityGroupId:
+    Description: >-
+      The ID of a security group that has Kinesis VPC Endpoint access.
+    Value: !GetAtt InterfaceEndpointsStack.Outputs.KinesisStreamsEndpointAccessSecurityGroupId
   KmsEndpointAccessSecurityGroupId:
     Description: >-
       The ID of a security group that has KMS VPC Endpoint access.
     Value: !GetAtt InterfaceEndpointsStack.Outputs.KmsEndpointAccessSecurityGroupId
-
+  StsEndpointAccessSecurityGroupId:
+    Description: >-
+      The ID of a security group that has STS VPC Endpoint access.
+    Value: !GetAtt InterfaceEndpointsStack.Outputs.StsEndpointAccessSecurityGroupId
   FlowLogsLogGroupName:
     Value: !GetAtt FlowLogsStack.Outputs.LogGroupName
