--- a/stacks/apps/augury.yml
+++ b/stacks/apps/augury.yml
@@ -57,9 +57,7 @@ Conditions:
   IsProduction: !Equals [!Ref EnvironmentType, Production]
   IsPrimaryRegion: !Equals [!Ref RegionMode, Primary]
   HasAuroraEndpoint: !Not [!Equals [!Ref SharedAuroraPostgresqlEndpoint, ""]]
-  # TODO: re-enable when we move off the old stacks
-  # EnableWorkers: !And [!Condition HasAuroraEndpoint, !Condition IsPrimaryRegion]
-  EnableWorkers: !Equals ["true", "false"]
+  EnableWorkers: !And [!Condition HasAuroraEndpoint, !Condition IsPrimaryRegion]
 
 Resources:
   Constants:
@@ -221,7 +219,7 @@ Resources:
       DeploymentConfiguration:
         MaximumPercent: 200
         MinimumHealthyPercent: 50
-      DesiredCount: 0 # TODO
+      DesiredCount: !If [IsProduction, 2, 1]
       EnableECSManagedTags: true
       PropagateTags: TASK_DEFINITION
       Tags:
