Add Augury requests to dashboard

--- a/stacks/apps-300A.yml
+++ b/stacks/apps-300A.yml
@@ -256,6 +256,9 @@ Outputs:
   StackName:
     Value: !Ref AWS::StackName
 
+  AuguryTargetGroupFullName:
+    Value: !GetAtt AuguryStack.Outputs.TargetGroupFullName
+
   DovetailVanityAlbDomain:
     Value: !GetAtt DovetailRouterStack.Outputs.VanityAlbDomain
   DovetailAlbName:
