--- a/stacks/apps/augury.yml
+++ b/stacks/apps/augury.yml
@@ -754,3 +754,7 @@ Resources:
         - MetricName: !Sub ForecastPartitionsElapsed${EnvironmentType}
           MetricNamespace: PRX/Augury
           MetricValue: $.elapsed
+
+Outputs:
+  TargetGroupFullName:
+    Value: !GetAtt TargetGroup.TargetGroupFullName
