--- a/stacks/dashboards.yml
+++ b/stacks/dashboards.yml
@@ -30,6 +30,8 @@ Parameters:
 
   StackResourceGroupName: { Type: String }
 
+  AuguryTargetGroupFullName: { Type: String }
+
   BacksawDeployBucketRegionalDomainName: { Type: String }
 
   BetaDeployBucketRegionalDomainName: { Type: String }
@@ -118,6 +120,7 @@ Resources:
                   "height": 9,
                   "properties": {
                       "metrics": [
+                          [ "AWS/ApplicationELB", "RequestCount", "TargetGroup", "${AuguryTargetGroupFullName}", "LoadBalancer", "${SharedAlbFullName}", { "label": "Augury" } ],
                           [ "AWS/ApplicationELB", "RequestCount", "TargetGroup", "${CastleTargetGroupFullName}", "LoadBalancer", "${SharedAlbFullName}", { "label": "Castle" } ],
                           [ "AWS/ApplicationELB", "RequestCount", "TargetGroup", "${CmsTargetGroupFullName}", "LoadBalancer", "${SharedAlbFullName}", { "label": "CMS" } ],
                           [ "AWS/ApplicationELB", "RequestCount", "TargetGroup", "${IdTargetGroupFullName}", "LoadBalancer", "${SharedAlbFullName}", { "label": "ID" } ],
