--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -1114,6 +1114,8 @@ Resources:
 
         SharedVpcFlowLogsLogGroupName: !GetAtt SharedVpcStack.Outputs.FlowLogsLogGroupName
 
+        AuguryTargetGroupFullName: !GetAtt Apps300AStack.Outputs.AuguryTargetGroupFullName
+
         BacksawDeployBucketRegionalDomainName: !GetAtt Apps400AStack.Outputs.BacksawDeployBucketRegionalDomainName
 
         BetaDeployBucketRegionalDomainName: !GetAtt Apps200AStack.Outputs.BetaDeployBucketRegionalDomainName
