Increase Augury web task count

--- a/stacks/apps/augury.yml
+++ b/stacks/apps/augury.yml
@@ -194,7 +194,7 @@ Resources:
       DeploymentConfiguration:
         MaximumPercent: 200
         MinimumHealthyPercent: 50
-      DesiredCount: 2
+      DesiredCount: !If [IsProduction, 4, 2]
       EnableECSManagedTags: true
       LoadBalancers:
         - ContainerName: !Ref kWebContainerName
