Disable old counts lambdas

--- a/stacks/apps/dovetail-counts.yml
+++ b/stacks/apps/dovetail-counts.yml
@@ -82,12 +82,12 @@ Resources:
           REDIS_URL: !Sub cluster://${SharedRedisReplicationGroupEndpointAddress}:${SharedRedisReplicationGroupEndpointPort}
           S3_BUCKET: !Ref DovetailS3Bucket
           S3_PREFIX: !Ref DovetailS3ObjectStitchPrefix
-          PROCESS_AFTER: !If [IsStaging, "1635276000", ""] # TODO
+          PROCESS_AFTER: !If [IsStaging, "1635276000", "1635285000"] # TODO
       Events:
         KinesisTrigger:
           Properties:
             BatchSize: 100
-            Enabled: !If [IsStaging, true, false] # TODO
+            Enabled: true
             StartingPosition: LATEST
             Stream: !Ref DovetailCdnLogsKinesisArn
           Type: Kinesis
