--- a/stacks/serverless/dovetail-counts-lambda.yml
+++ b/stacks/serverless/dovetail-counts-lambda.yml
@@ -110,7 +110,7 @@ Resources:
           REDIS_URL: !Ref RedisUrl
           S3_BUCKET: !Ref S3Bucket
           S3_PREFIX: !Ref S3Prefix
-          PROCESS_UNTIL: !If [IsStaging, "1635276000", ""]
+          PROCESS_UNTIL: !If [IsStaging, "1635276000", "1635285000"]
       Handler: index.handler
       Layers: !If
         - IsProduction
@@ -142,7 +142,7 @@ Resources:
     Type: "AWS::Lambda::EventSourceMapping"
     Properties:
       BatchSize: 100
-      Enabled: true
+      Enabled: false
       EventSourceArn: !Ref KinesisIn
       FunctionName: !Ref DovetailCountsLambdaFunction
       StartingPosition: "LATEST"
