Clean up custom rules

--- a/etc/theworld.org/template.yml
+++ b/etc/theworld.org/template.yml
@@ -49,27 +49,18 @@ Resources:
         - Source: https://www.theworld.org
           Status: "302"
           Target: https://theworld.org
-        # - Source: /sitemap.xml
-        #   Status: "301"
-        #   Target: https://sitemap.theworld.org/sitemap.xml
-        # - Source: /rss/twiw.xml
-        #   Status: "301"
-        #   Target: https://subtitlepod.com/feed/podcast
-        # - Source: /<*>
-        #   Status: "200"
-        #   Target: https://d1mnxf4cihmwok.cloudfront.net/<*>
-        # - Source: /<*>
-        #   Status: "200"
-        #   Target: https://d1f70plbelwnug.cloudfront.net/<*>
-        # - Source: /<*>
-        #   Status: "200"
-        #   Target: https://d101eude9252xm.cloudfront.net/<*>
-        # - Source: </^[^.]+$|\.(?!(css|gif|ico|jpg|js|png|txt|svg|woff|woff2|ttf|map|json|xml)$)([^.]+$)/>
-        #   Status: "200"
-        #   Target: /index.html
-        # - Source: /<*>
-        #   Status: "404"
-        #   Target: /index.html
+        - Source: /sitemap.xml
+          Status: "301"
+          Target: https://sitemap.theworld.org/sitemap.xml
+        - Source: /rss/twiw.xml
+          Status: "301"
+          Target: https://subtitlepod.com/feed/podcast
+        - Source: </^[^.]+$|\.(?!(css|gif|ico|jpg|js|png|txt|svg|woff|woff2|ttf|map|json|xml)$)([^.]+$)/>
+          Status: "200"
+          Target: /index.html
+        - Source: /<*>
+          Status: "404"
+          Target: /index.html
       Description: >-
         tktktk
       EnableBranchAutoDeletion: true
