--- a/etc/theworld.org/template.yml
+++ b/etc/theworld.org/template.yml
@@ -87,6 +87,24 @@ Resources:
         - { Key: prx:ops:environment, Value: Production }
         - { Key: prx:dev:family, Value: The World }
         - { Key: prx:dev:application, Value: theworld.org }
+  TheWorldApp5xxAlarm:
+    Type: AWS::CloudWatch::Alarm
+    Properties:
+      AlarmName: !Sub ERROR [The World] Amplify App <all> RETURNING 5XX ERRORS (${AWS::StackName})
+      AlarmDescription: >-
+        The Amplify app for theworld.org frontend is returning 5XX errors. This
+        includes all environments, not just production.
+      ComparisonOperator: GreaterThanThreshold
+      Dimensions:
+        - Name: App
+          Value: !GetAtt TheWorldApp.AppId
+      EvaluationPeriods: 1
+      MetricName: 5xxErrors
+      Namespace: AWS/AmplifyHosting
+      Period: 300
+      Statistic: Sum
+      Threshold: 10
+      TreatMissingData: notBreaching
 
   ProductionBranch:
     Type: AWS::Amplify::Branch
