--- a/etc/theworld.org/template.yml
+++ b/etc/theworld.org/template.yml
@@ -34,6 +34,19 @@ Resources:
         - { Key: prx:dev:family, Value: The World }
         - { Key: prx:dev:application, Value: theworld.org }
 
+  TheWorldDomain:
+    Type: AWS::Amplify::Domain
+    Properties:
+      AppId: !GetAtt TheWorldApp.AppId
+      # AutoSubDomainCreationPatterns:
+      #   - String
+      # AutoSubDomainIAMRole: String
+      DomainName: theworld.org
+      EnableAutoSubDomain: false
+      SubDomainSettings:
+        - BranchName: !GetAtt ProductionBranch.BranchName
+          Prefix: beta
+
   TheWorldApp:
     Type: AWS::Amplify::App
     Properties:
@@ -77,7 +90,7 @@ Resources:
           Value: |
             [{"name":"Next.js version","pkg":"next-version","type":"internal","version":"10"},"{\"pkg\":\"next-version\",\"type\":\"internal\",\"version\":\"10\"}"]
       IAMServiceRole: !GetAtt AmplifyServiceRole.Arn
-      Name: theworld.org
+      Name: The World Frontend
       OauthToken: !Ref GitHubPersonalAccessToken
       Repository: https://github.com/PRX/theworld.org
       Tags:
@@ -123,7 +136,6 @@ Resources:
         - { Key: prx:ops:environment, Value: Production }
         - { Key: prx:dev:family, Value: The World }
         - { Key: prx:dev:application, Value: theworld.org }
-
   PreviewBranch:
     Type: AWS::Amplify::Branch
     Properties:
