--- a/dns/publicfeeds.net-hosted_zone.yml
+++ b/dns/publicfeeds.net-hosted_zone.yml
@@ -197,3 +197,7 @@ Resources:
         # Unseen Unheard
         - { Type: A, Name: !Sub "pf2196usuh.${Domain}", AliasTarget: { DNSName: "d2s1srrp50e0q2.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
         - { Type: AAAA, Name: !Sub "pf2196usuh.${Domain}", AliasTarget: { DNSName: "d2s1srrp50e0q2.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+
+        # Built by Fidelity
+        - { Type: A, Name: !Sub "pf9382bbfd.${Domain}", AliasTarget: { DNSName: "d39u26z25y1es1.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: AAAA, Name: !Sub "pf9382bbfd.${Domain}", AliasTarget: { DNSName: "d39u26z25y1es1.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
