--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -1183,6 +1183,9 @@ Outputs:
   PipelineExecutionNonce:
     Value: !Ref PipelineExecutionNonce
 
+  EnvironmentType:
+    Value: !Ref EnvironmentType
+
   VPCCertificateArn:
     Description: The ARN for the wildcard certificate for the VPC
     Value: !GetAtt CertificateStack.Outputs.WildcardCertificateArn
@@ -1222,6 +1225,19 @@ Outputs:
   SharedVpcPrivateSubnet3Id:
     Description: The resource ID for private subnet 3
     Value: !GetAtt SharedVpcStack.Outputs.PrivateSubnet3Id
+
+  SharedEcsClusterName:
+    Value: !GetAtt SharedEcsClusterStack.Outputs.EcsClusterName
+
+  SharedAuroraMysqlEndpoint:
+    Value: !Ref SharedAuroraMysqlEndpoint
+  SharedAuroraMysqlPort:
+    Value: !Ref SharedAuroraMysqlPort
+
+  SharedAuroraPostgresqlEndpoint:
+    Value: !Ref SharedAuroraPostgresqlEndpoint
+  SharedAuroraPostgresqlPort:
+    Value: !Ref SharedAuroraPostgresqlPort
 
   FeederVanityAlbDomain:
     Value: !GetAtt Apps200AStack.Outputs.FeederVanityAlbDomain
