--- a/stacks/apps/dovetail-cdn-arranger.yml
+++ b/stacks/apps/dovetail-cdn-arranger.yml
@@ -5,7 +5,7 @@ Transform: AWS::Serverless-2016-10-31
 Description: >-
   Creates a Lambda function that can generate complete, stitched, transcoded
   audio files based on arrangement data used to determine ads and other dynamic
-  content. The function also transcoded component audio files (ads, etc) used
+  content. The function also transcodes component audio files (ads, etc) used
   for stitching. Also creates an S3 bucket to hold the files, which acts as a
   CDN origin for the complete files.
 
