--- a/stacks/apps/dovetail-counts.yml
+++ b/stacks/apps/dovetail-counts.yml
@@ -272,7 +272,7 @@ Resources:
       AlarmName: !Sub ERROR [Dovetail-Counts] Lambda function <${EnvironmentTypeAbbreviation}> LOGGED WARNS (${RootStackName})
       AlarmDescription: !Sub >-
         ${EnvironmentType} Dovetail Counts Lambda function has logged some
-        warnings, which count indicate invalid input data or less important
+        warnings, which could indicate invalid input data or less important
         operations that can't be retried.
       ComparisonOperator: GreaterThanThreshold
       EvaluationPeriods: 3
