--- a/stacks/apps/exchange.yml
+++ b/stacks/apps/exchange.yml
@@ -52,7 +52,7 @@ Conditions:
   HasAuroraEndpoint: !Not [!Equals [!Ref SharedAuroraMysqlEndpoint, ""]]
   # TODO: re-enable when we move off the old stacks
   # EnableWorkers: !And [!Condition HasAuroraEndpoint, !Condition IsPrimaryRegion]
-  EnableWorkers: !Equals ['true', 'false']
+  EnableWorkers: !Equals ["true", "false"]
 
 Resources:
   ExchangeWildcardHostHeaderListenerRule:
