--- a/stacks/apps/iframely.yml
+++ b/stacks/apps/iframely.yml
@@ -57,6 +57,18 @@ Resources:
             - embed.pri.org
       ListenerArn: !Ref AlbHttpsListenerArn
       Priority: !Join ["", [!Ref AlbListenerRulePriorityPrefix, "01"]]
+  DomainHostHeader2ListenerRule:
+    Type: AWS::ElasticLoadBalancingV2::ListenerRule
+    Properties:
+      Actions:
+        - TargetGroupArn: !Ref TargetGroup
+          Type: forward
+      Conditions:
+        - Field: host-header
+          Values:
+            - embed.theworld.org
+      ListenerArn: !Ref AlbHttpsListenerArn
+      Priority: !Join ["", [!Ref AlbListenerRulePriorityPrefix, "02"]]
 
   TargetGroup:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
