Add embed.theworld.org DNS record

--- a/dns/theworld.org-hosted-zone.yml
+++ b/dns/theworld.org-hosted-zone.yml
@@ -229,6 +229,19 @@ Resources:
           Type: AAAA
           Name: !Sub sitemap.${Domain}
 
+  Embed:
+    Type: AWS::Route53::RecordSetGroup
+    Properties:
+      Comment: Embed
+      HostedZoneId: !Ref HostedZone
+      RecordSets:
+        # Iframely
+        - Name: !Sub embed.${Domain}
+          ResourceRecords:
+            - iframely.dualstack.infrast-alb-glmluhy47jtg-1091895049.us-east-1.elb.amazonaws.com.prod.prx.tech.
+          TTL: "3600"
+          Type: CNAME
+
   ZenDesk:
     Type: AWS::Route53::RecordSetGroup
     Properties:
