Add preview subdomain

--- a/etc/theworld.org/template.yml
+++ b/etc/theworld.org/template.yml
@@ -46,6 +46,8 @@ Resources:
       SubDomainSettings:
         - BranchName: !GetAtt ProductionBranch.BranchName
           Prefix: beta
+        - BranchName: !GetAtt PreviewBranch.BranchName
+          Prefix: preview
 
   TheWorldApp:
     Type: AWS::Amplify::App
