--- a/stacks/apps/radiotopia-tower.yml
+++ b/stacks/apps/radiotopia-tower.yml
@@ -36,6 +36,8 @@ Resources:
           - OPTIONS
         AllowOrigins:
           - "*"
+      Description: !Sub >-
+        ${EnvironmentType} Radiotopia Tower API
       Tags:
         prx:meta:tagging-version: "2021-04-07"
         prx:cloudformation:stack-name: !Ref AWS::StackName
