--- a/stacks/apps/theworld-search.yml
+++ b/stacks/apps/theworld-search.yml
@@ -35,6 +35,8 @@ Resources:
           - OPTIONS
         AllowOrigins:
           - "*"
+      Description: !Sub >-
+        ${EnvironmentType} The World search API
       Tags:
         prx:meta:tagging-version: "2021-04-07"
         prx:cloudformation:stack-name: !Ref AWS::StackName
