--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -100,6 +100,8 @@ Parameters:
   BacksawArchiveS3ObjectKey: { Type: String }
   BacksawCloudFrontOai: { Type: String }
   SharedResourceSharePrincipals: { Type: CommaDelimitedList }
+  TheWorldSearchGoogleCustomSearchEngineId: { Type: String }
+  TheWorldSearchGoogleCustomSearchApiKey: { Type: String }
   # Parameter Overrides from the CodePipeline action
   InfrastructureStorageStackName: { Type: String }
   NotificationsStackName: { Type: String }
