Pass params to search function

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -853,6 +853,9 @@ Resources:
         StyleguideEcrImageTag: !Ref StyleguideEcrImageTag
         StyleguideSecretsVersion: !Ref StyleguideSecretsVersion
         StyleguideSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Styleguide, prefix]
+
+        TheWorldSearchGoogleCustomSearchEngineId: !Ref TheWorldSearchGoogleCustomSearchEngineId
+        TheWorldSearchGoogleCustomSearchApiKey: !Ref TheWorldSearchGoogleCustomSearchApiKey
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
