--- a/stacks/apps-100A.yml
+++ b/stacks/apps-100A.yml
@@ -72,6 +72,8 @@ Parameters:
   StyleguideSecretsVersion: { Type: String }
   StyleguideSharedAlbListenerRulePriorityPrefix: { Type: String }
 
+  TheWorldSearchGoogleCustomSearchEngineId: { Type: String }
+  TheWorldSearchGoogleCustomSearchApiKey: { Type: String }
 Conditions:
   IsStaging: !Equals [!Ref EnvironmentType, Staging]
 
@@ -421,6 +423,8 @@ Resources:
         CloudWatchLogGroupTaggerServiceToken: !Ref CloudWatchLogGroupTaggerServiceToken
         CodeS3Bucket: !Ref DeploymentPackageBucketName
         CodeS3ObjectKey: !Ref RadiotopiaTowerLambdaCodeS3ObjectKey
+        TheWorldSearchGoogleCustomSearchEngineId: !Ref TheWorldSearchGoogleCustomSearchEngineId
+        TheWorldSearchGoogleCustomSearchApiKey: !Ref TheWorldSearchGoogleCustomSearchApiKey
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
