Add The World search artifact param

--- a/stacks/apps-100A.yml
+++ b/stacks/apps-100A.yml
@@ -74,6 +74,7 @@ Parameters:
 
   TheWorldSearchGoogleCustomSearchEngineId: { Type: String }
   TheWorldSearchGoogleCustomSearchApiKey: { Type: String }
+  TheWorldSearchCodeS3ObjectKey: { Type: String }
 Conditions:
   IsStaging: !Equals [!Ref EnvironmentType, Staging]
 
