--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -100,6 +100,7 @@ Parameters:
   BacksawArchiveS3ObjectKey: { Type: String }
   BacksawCloudFrontOai: { Type: String }
   SharedResourceSharePrincipals: { Type: CommaDelimitedList }
+  TheWorldSearchCodeS3ObjectKey: { Type: String }
   TheWorldSearchGoogleCustomSearchEngineId: { Type: String }
   TheWorldSearchGoogleCustomSearchApiKey: { Type: String }
   # Parameter Overrides from the CodePipeline action
@@ -856,6 +857,7 @@ Resources:
 
         TheWorldSearchGoogleCustomSearchEngineId: !Ref TheWorldSearchGoogleCustomSearchEngineId
         TheWorldSearchGoogleCustomSearchApiKey: !Ref TheWorldSearchGoogleCustomSearchApiKey
+        TheWorldSearchCodeS3ObjectKey: !Ref TheWorldSearchCodeS3ObjectKey
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
