Add search requests to dashboard

--- a/stacks/apps-100A.yml
+++ b/stacks/apps-100A.yml
@@ -471,3 +471,6 @@ Outputs:
     Value: !GetAtt PlayStack.Outputs.ProxyTargetGroupFullName
   PlayWebTargetGroupFullName:
     Value: !GetAtt PlayStack.Outputs.WebTargetGroupFullName
+
+  TheWorldSearchApiId:
+    Value: !GetAtt TheWorldSearchStack.Outputs.ApiId
