--- a/stacks/apps/theworld-search.yml
+++ b/stacks/apps/theworld-search.yml
@@ -173,3 +173,7 @@ Resources:
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:family, Value: The World }
         - { Key: prx:dev:application, Value: Search }
+
+Outputs:
+  ApiId:
+    Value: !Ref HttpApi
