--- a/stacks/dashboards.yml
+++ b/stacks/dashboards.yml
@@ -66,6 +66,8 @@ Parameters:
 
   RemixTargetGroupFullName: { Type: String }
 
+  TheWorldSearchApiId: { Type: String }
+
 Resources:
   StackOverviewDashboard:
     Type: AWS::CloudWatch::Dashboard
@@ -132,6 +134,7 @@ Resources:
                           [ "AWS/ApiGateway", "Count", "ApiId", "${ProxyApiId}", { "label": "Proxy" } ],
                           [ "AWS/ApplicationELB", "RequestCount", "TargetGroup", "${PublishTargetGroupFullName}", "LoadBalancer", "${SharedAlbFullName}", { "label": "Publish" } ],
                           [ "AWS/ApplicationELB", "RequestCount", "TargetGroup", "${RemixTargetGroupFullName}", "LoadBalancer", "${SharedAlbFullName}", { "label": "Remix" } ]
+                          [ "AWS/ApiGateway", "Count", "ApiId", "${TheWorldSearchApiId}", { "label": "The World Search" } ],
                       ],
                       "view": "timeSeries",
                       "stacked": false,
