--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -1156,6 +1156,8 @@ Resources:
         PublishTargetGroupFullName: !GetAtt Apps200AStack.Outputs.PublishTargetGroupFullName
 
         RemixTargetGroupFullName: !GetAtt Apps200AStack.Outputs.RemixTargetGroupFullName
+
+        TheWorldSearchApiId: !GetAtt Apps100AStack.Outputs.TheWorldSearchApiId
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
