--- a/stacks/dashboards.yml
+++ b/stacks/dashboards.yml
@@ -133,8 +133,8 @@ Resources:
                           [ "AWS/ApplicationELB", "RequestCount", "TargetGroup", "${PlayWebTargetGroupFullName}", "LoadBalancer", "${SharedAlbFullName}", { "label": "Play::Web" } ],
                           [ "AWS/ApiGateway", "Count", "ApiId", "${ProxyApiId}", { "label": "Proxy" } ],
                           [ "AWS/ApplicationELB", "RequestCount", "TargetGroup", "${PublishTargetGroupFullName}", "LoadBalancer", "${SharedAlbFullName}", { "label": "Publish" } ],
-                          [ "AWS/ApplicationELB", "RequestCount", "TargetGroup", "${RemixTargetGroupFullName}", "LoadBalancer", "${SharedAlbFullName}", { "label": "Remix" } ]
-                          [ "AWS/ApiGateway", "Count", "ApiId", "${TheWorldSearchApiId}", { "label": "The World Search" } ],
+                          [ "AWS/ApplicationELB", "RequestCount", "TargetGroup", "${RemixTargetGroupFullName}", "LoadBalancer", "${SharedAlbFullName}", { "label": "Remix" } ],
+                          [ "AWS/ApiGateway", "Count", "ApiId", "${TheWorldSearchApiId}", { "label": "The World Search" } ]
                       ],
                       "view": "timeSeries",
                       "stacked": false,
