Add validation record

--- a/dns/theworld.org-hosted-zone.yml
+++ b/dns/theworld.org-hosted-zone.yml
@@ -304,6 +304,12 @@ Resources:
       Comment: AWS ACM validation records for feed-cdn-production in us-east-1
       HostedZoneId: !Ref HostedZone
       RecordSets:
+        #  *.theworld.org
+        - Name: !Sub _96cfaea1877750632f0bc654c0469a44.${Domain}
+          ResourceRecords:
+            - _cb506d2890cda6cfc9bde19bda1af606.bcsdcprczz.acm-validations.aws.
+          TTL: "3600"
+          Type: CNAME
         #  feed.theworld.org
         - Name: !Sub _69e3012e6d990b8b21c001001e70b2a0.feed.${Domain}
           ResourceRecords:
