The theworld.org to ALB certificate

--- a/stacks/shared-alb.yml
+++ b/stacks/shared-alb.yml
@@ -89,6 +89,7 @@ Resources:
         - !If [IsProduction, "*.prx.tech", !Ref "AWS::NoValue"]
         - !If [IsProduction, "*.prx.mx", !Ref "AWS::NoValue"]
         - !If [IsProduction, "*.pri.org", !Ref "AWS::NoValue"]
+        - !If [IsProduction, "*.theworld.org", !Ref "AWS::NoValue"]
         - !GetAtt Constants.VanityAlbDomain
       Tags:
         - { Key: Name, Value: !Sub "${RootStackName}_shared_${Alb.LoadBalancerName}" }
