feat(etc): add redirect rules to theworld.org

--- a/etc/theworld.org/template.yml
+++ b/etc/theworld.org/template.yml
@@ -64,12 +64,30 @@ Resources:
         - Source: https://www.theworld.org
           Status: "302"
           Target: https://theworld.org
+        - Source: /rss/glohit.xml
+          Status: "301"
+          Target: http://feeds.feedburner.com/pri/global-hit
+        - Source: /rss/geoquiz.xml
+          Status: "301"
+          Target: http://feeds.feedburner.com/pri/geo-quiz
+        - Source: /rss/theworld.xml
+          Status: "301"
+          Target: http://feeds.feedburner.com/pri/theworld
         - Source: /sitemap.xml
           Status: "301"
           Target: https://sitemap.theworld.org/sitemap.xml
         - Source: /rss/twiw.xml
           Status: "301"
           Target: https://subtitlepod.com/feed/podcast
+        - Source: /collections/<*>
+          Status: "301"
+          Target: /categories/<*>
+        - Source: /sections/<*>
+          Status: "301"
+          Target: /categories/<*>
+        - Source: /series/<*>
+          Status: "301"
+          Target: /categories/<*>
         - Source: </^[^.]+$|\.(?!(css|gif|ico|jpg|js|png|txt|svg|woff|woff2|ttf|map|json|xml)$)([^.]+$)/>
           Status: "200"
           Target: /index.html
@@ -77,7 +95,7 @@ Resources:
           Status: "404"
           Target: /index.html
       Description: >-
-        tktktk
+        NextJs frontend for The World website.
       EnableBranchAutoDeletion: true
       EnvironmentVariables:
         - Name: CM_API_KEY
