--- a/stacks/apps/augury.yml
+++ b/stacks/apps/augury.yml
@@ -562,27 +562,27 @@ Resources:
               Value: !Ref SharedAuroraPostgresqlEndpoint
             - Name: POSTGRES_PORT
               Value: !Ref SharedAuroraPostgresqlPort
-            - Name: RAILS_SERVE_STATIC_FILES # TODO Remove from secrets
+            - Name: RAILS_SERVE_STATIC_FILES
               Value: "true"
-            - Name: POSTGRES_POOL_SIZE # TODO Remove from secrets
+            - Name: POSTGRES_POOL_SIZE
               Value: !Ref kPostgresPoolSize
-            - Name: CASTLE_POSTGRES_HOST # TODO Remove from secrets
+            - Name: CASTLE_POSTGRES_HOST
               Value: !Ref CastlePostgresInstanceEndpointAddress
-            - Name: CASTLE_POSTGRES_PORT # TODO Remove from secrets
+            - Name: CASTLE_POSTGRES_PORT
               Value: !Ref CastlePostgresInstanceEndpointPort
-            - Name: CASTLE_HOST # TODO Remove from secrets
+            - Name: CASTLE_HOST
               Value: !Ref CastleHostname
-            - Name: CMS_HOST # TODO Remove from secrets
+            - Name: CMS_HOST
               Value: !Ref CmsHostname
-            - Name: DOVETAIL_HOST # TODO Remove from secrets
+            - Name: DOVETAIL_HOST
               Value: !Ref DovetailRouterHostname
-            - Name: FEEDER_HOST # TODO Remove from secrets
+            - Name: FEEDER_HOST
               Value: !Ref FeederHostname
-            - Name: ID_HOST # TODO Remove from secrets
+            - Name: ID_HOST
               Value: !Ref IdHostname
-            - Name: NEW_RELIC_LICENSE_KEY # TODO Remove from secrets
+            - Name: NEW_RELIC_KEY
               Value: !Ref NewRelicApiKeyPrxLite
-            - Name: NEW_RELIC_NAME # TODO Remove from secrets
+            - Name: NEW_RELIC_NAME
               Value: !If [IsProduction, Augury Production, Augury Staging]
             - Name: BQ_DATASET # TODO Remove from secrets
               Value: !If [IsProduction, production, staging]
