Move environment settings to ID task def

--- a/stacks/apps/id.yml
+++ b/stacks/apps/id.yml
@@ -33,6 +33,7 @@ Parameters:
   CloudWatchLogGroupTaggerServiceToken: { Type: String }
   CmsHostname: { Type: String }
   ExchangeHostname: { Type: String }
+  IdHostname: { Type: String }
   SharedAuroraMysqlEndpoint: { Type: String }
   SharedAuroraMysqlPort: { Type: String }
 
@@ -240,6 +241,10 @@ Resources:
               Value: "5"
             - Name: SIGN_UP_URL
               Value: !Sub https://${ExchangeHostname}/users/new
+            - Name: DEVISE_MAILER_EMAIL
+              Value: !If [IsProduction, do-not-reply@prx.org, do-not-reply-staging@prx.org]
+            - Name: ACTION_MAILER_HOST
+              Value: !Ref IdHostname
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
