--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -817,9 +817,10 @@ Resources:
         DeploymentPackageBucketName: !GetAtt Constants.DeploymentPackageBucketName
         CmsHostname: !GetAtt Constants.CmsHostname
         ExchangeHostname: !GetAtt Constants.ExchangeHostname
+        DovetailRouterHostname: !GetAtt Constants.DovetailRouterHostname
+        IdHostname: !GetAtt Constants.IdHostname
         SharedAuroraMysqlEndpoint: !Ref SharedAuroraMysqlEndpoint
         SharedAuroraMysqlPort: !Ref SharedAuroraMysqlPort
-        DovetailRouterHostname: !GetAtt Constants.DovetailRouterHostname
 
         # App-specific parameters
 
