Add Porter SNS topic stack parameter

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -52,6 +52,7 @@ Parameters:
     ConstraintDescription: >-
       must be a /16 private network
   DovetailRedisHostname: { Type: String }
+  PorterJobExecutionSnsTopicArn: { Type: String }
   # Application Specific
   AuguryEcrImageTag: { Type: String }
   AugurySecretsVersion: { Type: String }
