Pass Porter param to Remix task def

--- a/stacks/apps-200A.yml
+++ b/stacks/apps-200A.yml
@@ -59,6 +59,7 @@ Parameters:
   SharedAuroraPostgresqlEndpoint: { Type: String }
   SharedAuroraPostgresqlPort: { Type: String }
   SharedGlueDatabaseName: { Type: String }
+  PorterJobExecutionSnsTopicArn: { Type: String }
 
   BetaPrxOrgArchiveS3ObjectKey: { Type: String }
   BetaPrxOrgCloudFrontOai: { Type: String }
@@ -385,6 +386,7 @@ Resources:
         CloudWatchLogGroupTaggerServiceToken: !Ref CloudWatchLogGroupTaggerServiceToken
         SharedAuroraPostgresqlEndpoint: !Ref SharedAuroraPostgresqlEndpoint
         SharedAuroraPostgresqlPort: !Ref SharedAuroraPostgresqlPort
+        PorterJobExecutionSnsTopicArn: !Ref PorterJobExecutionSnsTopicArn
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
