--- a/stacks/apps/remix.yml
+++ b/stacks/apps/remix.yml
@@ -35,6 +35,7 @@ Parameters:
   SecretsStackName: { Type: String }
   SharedAuroraPostgresqlEndpoint: { Type: String }
   SharedAuroraPostgresqlPort: { Type: String }
+  PorterJobExecutionSnsTopicArn: { Type: String }
 
 Conditions:
   IsProduction: !Equals [!Ref EnvironmentType, Production]
@@ -235,6 +236,8 @@ Resources:
               Value: !Ref SharedAuroraPostgresqlEndpoint
             - Name: DB_PORT_5432_TCP_PORT
               Value: !Ref SharedAuroraPostgresqlPort
+            - Name: PORTER_SNS_TOPIC
+              Value: !Ref PorterJobExecutionSnsTopicArn
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
@@ -300,6 +303,8 @@ Resources:
               Value: !Ref SharedAuroraPostgresqlEndpoint
             - Name: DB_PORT_5432_TCP_PORT
               Value: !Ref SharedAuroraPostgresqlPort
+            - Name: PORTER_SNS_TOPIC
+              Value: !Ref PorterJobExecutionSnsTopicArn
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
