--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -928,6 +928,7 @@ Resources:
         SharedAuroraPostgresqlEndpoint: !Ref SharedAuroraPostgresqlEndpoint
         SharedAuroraPostgresqlPort: !Ref SharedAuroraPostgresqlPort
         SharedGlueDatabaseName: !GetAtt SharedGlueDatabaseStack.Outputs.SharedGlueDatabaseName
+        PorterJobExecutionSnsTopicArn: !Ref PorterJobExecutionSnsTopicArn
 
         # App-specific parameters
 
