--- a/stacks/apps/remix.yml
+++ b/stacks/apps/remix.yml
@@ -150,7 +150,7 @@ Resources:
         - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Remix }
-  TaskRole:
+  TaskRole: # TODO Refactor IAM user into this role: remix_select, remix-staging
     Type: AWS::IAM::Role
     Properties:
       AssumeRolePolicyDocument:
