--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -236,6 +236,7 @@ Resources:
       CastleHostname: !If [IsProduction, castle.prx.tech, castle.staging.prx.tech]
       CmsHostname: !If [IsProduction, cms.prx.org, cms.staging.prx.tech]
       CorporateHostname: corporate.prx.tech
+      DovetailCdnHostname: !If [IsProduction, dovetail3-cdn.prxu.org, dovetail3-cdn-staging.prxu.org]
       DovetailRouterHostname: !If [IsProduction, dovetail-router.prxu.org, dovetail-router.staging.prxu.org]
       ExchangeHostname: !If [IsProduction, exchange.prx.org, exchange.staging.prx.tech]
       FeederHostname: !If [IsProduction, feeder.prx.org, feeder.staging.prx.tech]
@@ -1015,8 +1016,10 @@ Resources:
         ExchangeHostname: !GetAtt Constants.ExchangeHostname
         IdHostname: !GetAtt Constants.IdHostname
         AdFilesHostname: !GetAtt Constants.AdFilesHostname
+        AuguryHostname: !GetAtt Constants.AuguryHostname
         FeederHostname: !GetAtt Constants.FeederHostname
         CmsHostname: !GetAtt Constants.CmsHostname
+        DovetailCdnHostname: !GetAtt Constants.DovetailCdnHostname
         DovetailRouterHostname: !GetAtt Constants.DovetailRouterHostname
         SharedGlueDatabaseName: !GetAtt SharedGlueDatabaseStack.Outputs.SharedGlueDatabaseName
 
