Move environment config

--- a/stacks/apps/dovetail-router.yml
+++ b/stacks/apps/dovetail-router.yml
@@ -787,6 +787,8 @@ Resources:
               Value: !If [IsProduction, Dovetail Router Production, Dovetail Router Staging]
             - Name: NEWRELIC_LICENSE_KEY
               Value: !Ref NewRelicApiKeyPrxLite
+            - Name: AGENTS_URL
+              Value: https://raw.githubusercontent.com/PRX/prx-podagent/master/db/agents.lock.json
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
